fixtures/frontend/milestone-2/valid/source-option-constructor-applications/main.aivi
type HttpError =
  | Timeout

type User = {
    id: Int
}

type DecodeMode =
  | Strict
  | Permissive

type Map K V =
  | EmptyMap
  | Entry K V (Map K V)

domain Duration over Int
    literal sec : Int -> Duration

domain Retry over Int
    literal rt : Int -> Retry

@source http.get "/users" with {
    headers: Entry "Authorization" "Bearer demo" EmptyMap,
    decode: Strict,
    retry: 3rt,
    timeout: 5sec
}
signal users : Signal (Result HttpError (List User))
