fixtures/frontend/milestone-2/invalid/source-option-constructor-application-mismatch/main.aivi
type HttpError =
  | Timeout

type User = { id: Int }

type DecodeMode =
  | Strict
  | Permissive

type Map K V =
  | EmptyMap
  | Entry K V (Map K V)

domain Duration over Int
    suffix sec : Int = value => Duration value

domain Retry over Int
    suffix times : Int = value => Retry value

@source http.get "/users" with {
    headers: Entry 1 "Bearer demo" EmptyMap,
    decode: Strict,
    retry: 3times,
    timeout: 5sec
}
signal users : Signal (Result HttpError (List User))
